@@ -51,7 +51,10 @@ Core and Builtins
 Library
 -------
 
-- Issue #11703 - urllib2.geturl() does not return correct url when the original
+- Issue #9233: Fix json.loads('{}') to return a dict (instead of a list), when
+  _json is not available.
+
+- Issue #11703: urllib2.geturl() does not return correct url when the original
   url contains #fragment.
 
 - Issue #10019: Fixed regression in json module where an indent of 0 stopped
